--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
         <div class="one-col__about-me">
           <span class="one-col__profession">Front-End Developer</span>
           <h1 class="one-col__name-title">Denis Rodin</h1>
-          <p class="one-col__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid reprehenderit earum vitae, temporibus aliquam ut dolorum ad ducimus pariatur. Et earum ratione officiis expedita unde ad debitis ea, tempora dignissimos voluptatum eligendi impedit commodi aliquam pariatur dolores praesentium nisi. Ea cumque quae, maiores libero quam eius debitis nemo excepturi dignissimos?</p>
+          <p class="one-col__descr">Hi. My name is Denis and I am a beginner developer. I dream of starting my career in this particular company, because I consider myself worthy of it. My knowledge is not as extensive as I would like, but every day I learn something new and develop. I look forward to further cooperation. Have a nice day</p>
         </div>
         <div class="one-col__projects">
           <h2 class="one-col__title">Projects</h2>
           <ul class="one-col__list">
-            <li class="one-col__item"><span class="modif">1) </span><a href="https://rodden95.github.io/goit-markup-hw-08/" class="link" target="_blank">Final homework on courses<span class="one-col__clarification"></span></a></li>
-            <li class="one-col__item"><span class="modif">2) </span><a href="https://rodden95.github.io/newProject/" class="link" target="_blank">Freelance Project<span class="one-col__clarification"></span></a></li><span class="modif">3) </span>
-            <a href="https://dmytrodemianenko.github.io/team-project-11/" class="link" target="_blank">Project on courses</a>
+            <li class="one-col__item"><span class="modif">1) </span><a href="https://rodden95.github.io/goit-markup-hw-08/" class="link" target="_blank">Final homework on HTML/CSS<span class="one-col__clarification"></span></a></li>
+            <!-- <li class="one-col__item"><span class="modif">2) </span><a href="https://rodden95.github.io/newProject/" class="link" target="_blank">Freelance Project<span class="one-col__clarification"></span></a></li>-->
+            <li class="one-col__item">
+            <span class="modif">2) </span>
+            <a href="https://dmytrodemianenko.github.io/team-project-11/" class="link" target="_blank">HTML/CSS project on courses</a></li>
+            <li class="one-col__item">
+            <span class="modif">3)</span>
+            <a href="https://rodden95.github.io/goit-js-hw-08-gallery/" class="link" target="_blank">Gallery JS</a></li>         
           </ul>
         </div>
         <div class="one-col__work-experience">
@@ -53,7 +58,7 @@
           <div class="one-col-education-cont">
             <div class="one-col__name-of">GoIT Academy</div>
             <span class="one-col__faculty">Fullstack JS Developer</span>
-            <div class="one-col__date">2020-2021</div>
+            <div class="one-col__date">2021-2022</div>
           </div>
         </div>
       </section>
@@ -78,8 +83,6 @@
               <li class="two-col_item">SASS</li>
               <li class="two-col_item">GIT</li>
               <li class="two-col_item">JavaScript</li>
-              <!-- <li class="two-col_item">React.js</li>
-              <li class="two-col_item">Node.js</li> -->
             </ul>
           </div>
           <div class="two-col__skills">
